--- a/assets/css/asee.css
+++ b/assets/css/asee.css
@@ -12,5 +12,28 @@
 }
 
 #asee-main {
-    padding-top: 1em;
+    padding-left: 1em;
+    padding-right: 1em;
+}
+
+.asee-section {
+    padding: 0.25em;
+    margin-top: 0.5em;
+    background-color: white;
+}
+
+.asee-banner {
+    padding-top: 4em;
+    padding-bottom: 4em;
+    background: url('../images/engrquad.jpg') no-repeat center center;
+    background-size: cover;
+}
+
+.asee-banner h2, .asee-banner h4 {
+    color: white;
+    text-shadow:
+            -1px -1px 0 #000,
+            1px -1px 0 #000,
+            -1px 1px 0 #000,
+            1px 1px 0 #000;
 }
